<resources>
    <string name="app_name">Anima Calculator Ex</string>
    <string name="main_activity_name">Calculator Ex</string>
    <string name="attack">Attack</string>
    <string name="roll">Roll</string>
    <string name="damage">Damage</string>
    <string name="edit_modifiers">Edit modifiers</string>
    <string name="defense">Defense</string>
    <string name="at">AT</string>
    <string name="defense_first">1ˢᵗ</string>
    <string name="defense_second">2ⁿᵈ</string>
    <string name="defense_third">3ʳᵈ</string>
    <string name="defense_fourth">4ᵗʰ</string>
    <string name="defense_fifth_plus">5ᵗʰ+</string>
    <string name="total_offensive">Total Offensive</string>
    <string name="offensive">Offensive</string>
    <string name="flank">Flank</string>
    <string name="from_behind">From Behind</string>
    <string name="vision_partially_obscured">Vision Partially Obscured</string>
    <string name="vision_totally_obscured">Vision Totally Obscured</string>
    <string name="higher_ground">Higher Ground</string>
    <string name="from_ground">From Ground</string>
    <string name="partially_immobilized">Partially Immobilized</string>
    <string name="partially_immobilized_block">Partially Immobilized (Block)</string>
    <string name="partially_immobilized_dodge">Partially Immobilized (Dodge)</string>
    <string name="mostly_immobilized">Mostly Immobilized</string>
    <string name="fully_immobilized">Fully Immobilized</string>
    <string name="put_at_weapons_point">Put at Weapon\'s Point</string>
    <string name="levitating">Levitating</string>
    <string name="levitating_block">Levitating (Block)</string>
    <string name="levitating_dodge">Levitating (Dodge)</string>
    <string name="flight_type_7_14">Flight 7–14</string>
    <string name="flight_type_15">Flight 15</string>
    <string name="charging">Charging</string>
    <string name="drawing_weapon">Drawing Weapon</string>
    <string name="crowded_space">Crowded Space</string>
    <string name="small_adversary">Small Adversary</string>
    <string name="tiny_adversary">Tiny Adversary</string>
    <string name="fear">Fear</string>
    <string name="pain">Pain</string>
    <string name="extreme_pain">Extreme Pain</string>
    <string name="defensive">Defensive</string>
    <string name="flanked">Flanked</string>
    <string name="surprised">Surprised</string>
    <string name="vision_partially_obscured_block">Vision Partially Obscured (Block)</string>
    <string name="vision_partially_obscured_dodge">Vision Partially Obscured (Dodge)</string>
    <string name="basic_seraphite">Basic Seraphite</string>
    <string name="arcane_seraphite">Arcane Seraphite</string>
    <string name="basic_shephon">Basic Shephon</string>
    <string name="arcane_shephon">Arcane Shephon</string>
    <string name="flight_15_block">Flight 15 (Block)</string>
    <string name="flight_15_dodge">Flight 15 (Dodge)</string>
    <string name="charging_block">Charging (Block)</string>
    <string name="charging_dodge">Charging (Dodge)</string>
    <string name="tiny_adversary_block">Tiny Adversary (Block)</string>
    <string name="total_defense">Total Defense</string>
    <string name="fire_projectiles_block">Fire Projectiles (Block)</string>
    <string name="fire_projectiles_shield">Fire Projectiles (Shield)</string>
    <string name="fire_projectiles_dodge">Fire Projectiles (Dodge)</string>
    <string name="fire_projectiles_b_p">Fire Projectiles (B.P.)</string>
    <string name="thrown_projectile_block">Thrown Projectile (Block)</string>
    <string name="endure_hit">Endure hit</string>
    <string name="energy_attack_block">Energy Attack (Block)</string>
    <string name="area_attack_block">Area Attack (Block)</string>
    <string name="area_attack_dodge">Area Attack (Dodge)</string>
    <string name="attack_modifiers">Attack modifiers</string>
    <string name="ok" translatable="false">OK</string>
    <string name="defense_modifiers">Defense modifiers</string>
    <string name="at_0">AT 0</string>
    <string name="at_">AT %d</string>
    <string name="nothing_happens">Nothing happens</string>
    <string name="damage_dealt_">Damage dealt: %d</string>
    <string name="percentage_out_of_total_damage">%1$d%% out of %2$d total damage</string>
    <string name="counterattack_with_bonus">Counter attack with +%d bonus</string>
    <string name="counterattack_without_bonus">Counter attack without bonus</string>
    <string name="settings">Settings</string>
    <string name="open_roll">Open roll</string>
    <string name="allow_palindrome">Allow palindrome</string>
    <string name="allow_open_rolls">Allow open rolls</string>
    <string name="allow_fumbles">Allow fumbles</string>
    <string name="open_rolls_start_with_">Open rolls start with:</string>
    <string name="save">Save</string>
    <string name="v_">v%s</string>
    <string name="is_fumble_if_below">Is fumble if below:</string>
    <string name="deselect_all">Deselect all</string>
    <string name="view_log">View log</string>
    <string name="log">Log</string>
    <string name="attack_roll">Attack roll</string>
    <string name="final_result_of">Final result of</string>
    <string name="you_fumbled_with_confirmation_level_of">You fumbled with a confirmation level of</string>
    <string name="your_rolls">Your rolls</string>
    <string name="defense_roll">Defense roll</string>
    <string name="aim_head">Aim head</string>
    <string name="aim_neck">Aim neck</string>
    <string name="aim_elbow">Aim elbow</string>
    <string name="aim_heart">Aim heart</string>
    <string name="aim_groin">Aim groin</string>
    <string name="aim_foot">Aim foot</string>
    <string name="aim_hand">Aim hand</string>
    <string name="aim_knee">Aim knee</string>
    <string name="aim_abdomen">Aim abdomen</string>
    <string name="aim_arm">Aim arm</string>
    <string name="aim_thigh">Aim thigh</string>
    <string name="aim_calve">Aim calve</string>
    <string name="aim_torso">Aim torso</string>
    <string name="aim_eye">Aim eye</string>
    <string name="aim_wrist">Aim wrist</string>
    <string name="aim_shoulder">Aim shoulder</string>
    <string name="with_different_weapon">With different weapon</string>
    <string name="similar_weapon">Similar weapon</string>
    <string name="double_weapon">Double weapon</string>
    <string name="different_weapon_or_unarmed">Different weapon or unarmed</string>
    <string name="projectile_move_faster_than_a_quarter_of_movement">Projectile: Move faster than a quarter of total movement</string>
    <string name="projectile_move_at_max_of_movement">Projectile: Move at max of movement</string>
    <string name="projectile_low_visibility">Projectile: Low visibility</string>
    <string name="projectile_target_has_cover">Projectile: target has cover</string>
    <string name="projectile_change_target">Projectile: change target</string>
    <string name="projectile_target_moves_faster_than_8">Projectile: Target moves faster than 8</string>
    <string name="projectile_target_moves_at_10">Projectile: Target moves at 10</string>
    <string name="projectile_target_moves_faster_than_10">Projectile: Target moves faster than 10</string>
    <string name="projectile_defended_on_that_assault">Projectile: Defended on same assault</string>
    <string name="projectile_beyond_weapon_reach">Projectile: Beyond weapon\'s reach</string>
    <string name="projectile_big_target">Projectile: Big target</string>
    <string name="projectile_aim_for_a_turn">Projectile: Aim for a turn</string>
    <string name="projectile_aim_for_two_turns">Projectile: Aim for 2 turns</string>
    <string name="projectile_aim_for_3_turns">Projectile: Aim for 3 turns</string>
    <string name="projectile_at_point_blank">Projectile: At point-blank</string>
    <string name="disarm">Disarm</string>
    <string name="grab">Grab</string>
    <string name="secondary_critic">Secondary crit</string>
    <string name="combat">Combat</string>
    <string name="initiative">Initiative</string>
    <string name="add_player">Add player</string>
    <string name="roll_initiative">Roll Initiative</string>
    <string name="add_character">Add character</string>
    <string name="base">Base</string>
    <string name="roll_attack">Roll attack</string>
    <string name="roll_defense">Roll defense</string>
    <string name="fumble">Fumble</string>
    <string name="new_character">New character</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="base_initiative">Base Initiative</string>
    <string name="add">Add</string>
    <string name="re_roll">Re-roll</string>
    <string name="sort">Sort</string>
    <string name="initiative_roll">Initiative Roll</string>
    <string name="roll_initiative_confirm">Roll for initiative for all?</string>
    <string name="delete_character_confirmation">Delete character?</string>
    <string name="delete">Delete</string>
    <string name="save_party">Save party</string>
    <string name="load_party">Load party</string>
    <string name="new_party">New party</string>
    <string name="party_name">Party name</string>
    <string name="party_saved">Party saved</string>
    <string name="clear_party_confirm">Any unsaved characters will be lost. Continue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_party">Delete party</string>
    <string name="delete_party_confirm">Are you sure you want to delete the current party?</string>
    <string name="is_enemy">Is enemy</string>
    <string name="enemies_explanation">Enemies are not persisted when the party is saved</string>
    <string name="do_roll">Roll</string>
    <string name="critical_hit">Critical hit</string>
    <string name="close">Close</string>
    <string name="roll_critic_level">Roll crit level</string>
    <string name="base_phys_res">Base PhR</string>
    <string name="attacker">Attacker</string>
    <string name="defender">Defender</string>
    <string name="defender_endures_critical">Defender endures the critical hit</string>
    <string name="attacker_critical_hits">Attacker deals a critical hit</string>
    <string name="crit_level">Crit level: %d</string>
    <string name="critical_hit_roll">Critical hit roll</string>
    <string name="defender_rolled_a_natural_100">Defender rolled a natural 100</string>
    <string name="phys_res_roll">PhR roll</string>
    <string name="has_damage_resistance">Has damage resistance</string>
    <string name="difference_">Difference: %d</string>
    <string name="total_phys_res">Total PhR: %d</string>
    <string name="clear_combat">Clear</string>
    <string name="initiative_rolled">Initiative rolled!</string>
    <string name="undo">Undo</string>
    <string name="surprises_">- Surprises %s</string>
    <string name="surprised_by_">- Is surprised by %s</string>
    <string name="uroboros">Uroboros</string>
    <string name="uroboros_explanation">Surprises with 100 instead of 150</string>
    <string name="fatigue_0_points_left">Fatigue: 0 points left</string>
    <string name="fatigue_1_points_left">Fatigue: 1 point left</string>
    <string name="fatigue_2_points_left">Fatigue: 2 points left</string>
    <string name="fatigue_3_points_left">Fatigue: 3 points left</string>
    <string name="fatigue_4_points_left">Fatigue: 4 points left</string>
    <string name="fumble_level_">fumble lvl: %d</string>
    <string name="fumble_lvl">Fumble lvl</string>
    <string name="desktop_version">Desktop version</string>
    <string name="desktop_version_explanation">The Desktop version for Anima Calculator Ex is available at <a href="https://anima-calculator.com/">https://anima-calculator.com/</a></string>
    <plurals name="open_rolls">
        <item quantity="one">Open roll</item>
        <item quantity="other">Open rolls</item>
    </plurals>
</resources>