<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

    <LinearLayout
            android:id="@+id/lytName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

        <TextView
                android:id="@+id/txtLabelName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/material_black"
                android:labelFor="@id/edtName"
                android:text="@string/name"/>

        <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:importantForAutofill="no"
                android:imeOptions="actionNext"
                tools:ignore="UnusedAttribute"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/lytBaseInitiative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/lytName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

        <TextView
                android:id="@+id/txtLabelBaseInitiative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/material_black"
                android:labelFor="@id/edtBaseInitiative"
                android:text="@string/base_initiative"/>

        <EditText
                android:id="@+id/edtBaseInitiative"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:digits="0987654321+-"
                android:importantForAutofill="no"
                android:imeOptions="actionDone"
                android:text="0"
                tools:ignore="HardcodedText,UnusedAttribute"/>
    </LinearLayout>

    <CheckBox
            android:id="@+id/chkIsEnemy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/is_enemy"
            app:layout_constraintTop_toBottomOf="@id/lytBaseInitiative"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
            android:id="@+id/txtEnemiesExplanation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/enemies_explanation"
            android:textSize="12sp"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toRightOf="@id/chkIsEnemy"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/chkIsEnemy"
            app:layout_constraintTop_toTopOf="@id/chkIsEnemy"/>

    <CheckBox
            android:id="@+id/chkUroboros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/uroboros"
            app:layout_constraintTop_toBottomOf="@id/chkIsEnemy"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
            android:id="@+id/txtUroborosExplanation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/uroboros_explanation"
            android:textSize="12sp"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toRightOf="@id/chkUroboros"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/chkUroboros"
            app:layout_constraintTop_toTopOf="@id/chkUroboros"/>
</androidx.constraintlayout.widget.ConstraintLayout>
