<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">

    <LinearLayout
            android:id="@+id/lytInitiativeHeader"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:padding="4dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@color/initiative_header">

        <TextView
                android:id="@+id/txtPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:textColor="@color/material_black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="10."/>

        <TextView
                android:id="@+id/txtCharacterName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/material_black"
                android:layout_weight="1"
                android:lines="1"
                android:ellipsize="end"
                tools:text="Dramak"/>

        <TextView
                android:id="@+id/txtInitiative"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/material_white"
                android:background="@drawable/bg_initiative"
                tools:text="230"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.Group
            android:id="@+id/groupInitiativeSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="lytInitiativeRoll,lytBaseInitiative,lytFumble,btnRollInitiativeDice, chkIsEnemy"/>

    <LinearLayout
            android:id="@+id/lytInitiativeRoll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/lytInitiativeHeader"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/lytBaseInitiative"
            app:layout_constraintHorizontal_chainStyle="spread">

        <TextView
                android:id="@+id/txtLabelInitiativeRoll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/material_black"
                android:labelFor="@id/edtInitiativeRoll"
                android:text="@string/roll"/>

        <EditText
                android:id="@+id/edtInitiativeRoll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:digits="0987654321+-"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                tools:ignore="UnusedAttribute"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/lytBaseInitiative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/lytInitiativeHeader"
            app:layout_constraintRight_toLeftOf="@id/lytFumble"
            app:layout_constraintLeft_toRightOf="@id/lytInitiativeRoll"
            app:layout_constraintHorizontal_chainStyle="spread">

        <TextView
                android:id="@+id/txtLabelBaseInitiative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/material_black"
                android:labelFor="@id/edtBaseInitiative"
                android:text="@string/base"/>

        <EditText
                android:id="@+id/edtBaseInitiative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:digits="0987654321+-"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                tools:ignore="UnusedAttribute"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/lytFumble"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/lytInitiativeHeader"
            app:layout_constraintLeft_toRightOf="@id/lytBaseInitiative"
            app:layout_constraintRight_toLeftOf="@id/btnRollInitiativeDice"
            app:layout_constraintHorizontal_chainStyle="spread">

        <TextView
                android:id="@+id/txtLabelFumble"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/material_black"
                android:labelFor="@id/edtFumble"
                android:text="@string/fumble"/>

        <EditText
                android:id="@+id/edtFumble"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:digits="0987654321+-"
                android:importantForAutofill="no"
                tools:ignore="UnusedAttribute"/>
    </LinearLayout>

    <ImageButton
            android:id="@+id/btnRollInitiativeDice"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:contentDescription="@string/edit_modifiers"
            android:backgroundTint="@color/colorAccent"
            android:src="@drawable/ic_d10_light"
            app:layout_constraintBottom_toBottomOf="@id/lytBaseInitiative"
            app:layout_constraintLeft_toRightOf="@id/lytFumble"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="UnusedAttribute"/>

    <CheckBox
            android:id="@+id/chkIsEnemy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_enemy"
            app:layout_constraintTop_toBottomOf="@id/lytBaseInitiative"
            app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>